fix(Toast): fix overflows (#1079)

--- a/src/components/Toaster/Toast/Toast.scss
+++ b/src/components/Toaster/Toast/Toast.scss
@@ -92,6 +92,8 @@ $block: '.#{variables.$ns}toast';
         width: 100%;
         height: 100%;
         min-height: var(--g-text-body-2-line-height);
+        min-width: 0;
+        grid-template-columns: 100%;
 
         &:before {
             content: '';
